# cellstatemapping

./: .gitignore  BIGQA-WP1-functions.R  GS.proinf.txt  LICENSE  README.md  cfaCor.test.rds  draft1.R  draft2.R  final.R  final_script.Rmd  pyproject.toml  requirements.txt  statsmodel.ipynb
Objective1/: README.md  automatization.R  read.md
Objective2/: 1-s2.0-S2211124721014716-mmc3.xlsx  wtd_t_test.Rmd
Objective3/: Objective 3.Rmd
legacy/: README.md
legacy/Objective1/: GS.proinf.txt
legacy/Objective2/: statsmodel.ipynb  weighted_t_test.R
legacy/Objective3/: Objective 3.Rmd
src/cellstatemapping/: __init__.py  __main__.py  _generate_test_data.py  cfa.py  cli.py  distance.py  pipeline.py  preprocessing.py  stats.py
src/cellstatemapping/data/: test_curated_gene_sets.txt  test_expression_matrix.csv  test_gene_set.txt  test_metadata.csv
tests/: __init__.py  test_cfa.py  test_distance.py  test_pipeline.py  test_preprocessing.py  test_stats.py
